--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.14.5",
     "tslib": "^2.3.0",
     "uuid": "^11.0.3",
     "zone.js": "~0.11.4"
