--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "bootstrap": "^4.6.2",
+    "chart.js": "^4.0.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-chart-financial": "^0.2.0",
+    "chartjs-plugin-annotation": "^3.0.0",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "dayjs": "^1.11.13",
     "jquery": "^3.5.1",
     "popper.js": "^1.14.3",
