--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "chart.js": "^4.0.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-financial": "^0.2.0",
-    "chartjs-plugin-annotation": "^3.0.0",
+    "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.1.0",
     "dayjs": "^1.11.13",
     "jquery": "^3.5.1",
+    "ng2-charts": "^3.1.0",
     "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.14.5",
